--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: La Palma Earthquakes
+title: La Palma Earthquake Mechanisms
 author:
-  - name: Steve Purves
+  - name: Kittipos Sirivongrungson, M.D.
     orcid: 0000-0002-0760-5497
     corresponding: true
     email: steve@curvenote.com
@@ -39,6 +39,7 @@ jupyter: python3
 ## Introduction
 
 ```{python}
+#| echo: true
 import matplotlib.pyplot as plt
 import numpy as np
 eruptions = [1492, 1585, 1646, 1677, 1712, 1949, 1971, 2021]
@@ -65,7 +66,7 @@ avg_years_between_eruptions
 
 Based on data up to and including 1971, eruptions on La Palma happen every 79.8 years on average.
 
-Studies of the magma systems feeding the volcano, such as @marrero2019, have proposed that there are two main magma reservoirs feeding the Cumbre Vieja volcano; one in the mantle (30-40km depth) which charges and in turn feeds a shallower crustal reservoir (10-20km depth).
+Studies of the magma systems feeding the volcano, such as @marrero2019, have proposed that there are two main magma reservoirs feeding the Cumbre Vieja volcano; one in the mantle (30-40km depth) which charges and in turn feeds a shallower crustal reservoir (10-20km depth) [@marrero2019].
 
 Eight eruptions have been recorded since the late 1400s (@fig-timeline).
 
@@ -92,9 +93,9 @@ where $\lambda$ is the rate of eruptions per year. Using @eq-poisson, the probab
 
 : Recent historic eruptions on La Palma {#tbl-history}
 
-@tbl-history summarises the eruptions recorded since the colonization of the islands by Europeans in the late 1400s.
+@tbl-history summarises the eruptions recorded since the colonization of the islands by Europeans in the late 1400s [@tbl-history].
 
-![Map of La Palma](images/la-palma-map.png){#fig-map}
+![Map of La Palma](images/la-palma-map.png){#fig-map width="452"}
 
 La Palma is one of the west most islands in the Volcanic Archipelago of the Canary Islands (@fig-map).
 
